--- a/app/scripts/l10n/ko_KR.json
+++ b/app/scripts/l10n/ko_KR.json
@@ -4,27 +4,27 @@
   "CHAT" : "chat",
   "SHARE" : "share",
   "COMINGSOON" : "Coming soon for iOS & Android.",
-  "WELCOME-TITLE" : "Tōmōni 는 최초의 social discovery app 입니다.",
+  "WELCOME-TITLE" : "환영합니다! 최초의 활동 기반 친구찾기 앱 토모니입니다.",
   "WELCOME-CONTENT" : "여러분의 가까운 곳에서 새로운 친구를 찾아보세요.",
-  "TOMO-TITLE1" : "Tomo가 당신에게 데이트 상대를",
-  "TOMO-TITLE2" : "찾아 줄 겁니다.",
-  "TOMO-P1" : "Tomo stays where you put it and make your activities visible to all nearby users, then help you communicate with your potential partners.",
-  "TOMO-P2" : "No need to fill any forms. No need to pay to get to meet new people.",
-  "TOMO-P3" : "Just drop a tomo where you ans to hang out.",
-  "DROP-TITLE1" : "Drop and discover",
-  "DROP-TITLE2" : "tomos around you.",
-  "DROP-P" : "Tomo filters keep content interesting to you.",
-  "CHAT-TITLE1" : "Find something",
-  "CHAT-TITLE2" : "interesting?",
-  "CHAT-TITLE3" : "Chat about it.",
-  "CHAT-P" : "Use chat to share details and meetup.",
-  "SHARE-TITLE1" : "Share your",
-  "SHARE-TITLE2" : "activities on ",
-  "SHARE-TITLE3" : "Facebook and",
-  "SHARE-TITLE4" : "Twitter.",
-  "SHARE-P1" : "Get your friends involved",
-  "SHARE-P2" : "or meet new people.",
-  "COMINGSOON-TITLE1" : "Like us much?",
+  "TOMO-TITLE1" : "Tomo는 당신에게",
+  "TOMO-TITLE2" : "만남을 제공해줍니다.",
+  "TOMO-P1" : "토모는 당신이 지정한 곳에 남아 모든 주변 사용자들에게 당신의 활동을 보여주고, 함께 하고자 하는 사람들과의 연락을 도와줍니다.",
+  "TOMO-P2" : "당신이 가고자 하는 곳에 토모를 남기기만 하세요.",
+  "TOMO-P3" : "어떠한 양식도, 비용도 없이 새로운 사람들을 만날 수 있습니다.",
+  "DROP-TITLE1" : "토모를 남기고,",
+  "DROP-TITLE2" : "주변의 토모를 찾아보세요.",
+  "DROP-P" : "토모필터가 당신이 관심을 가질 만한 내용을 찾아줍니다.",
+  "CHAT-TITLE1" : "흥미로운 활동을",
+  "CHAT-TITLE2" : "찾았나요?",
+  "CHAT-TITLE3" : "이야기를 나눠보세요.",
+  "CHAT-P" : "채팅 기능을 사용해 세부사항을 공유하고 약속을 잡을 수 있습니다.",
+  "SHARE-TITLE1" : "Facebook과",
+  "SHARE-TITLE2" : "트위터에",
+  "SHARE-TITLE3" : "당신의 활동을",
+  "SHARE-TITLE4" : "공유해 보세요.",
+  "SHARE-P1" : "당신의 친구들과 함께 하거나",
+  "SHARE-P2" : "새로운 사람들을 만날 수 있습니다.",
+  "COMINGSOON-TITLE1" : "마음에 드시나요?",
   "COMINGSOON-TITLE2" : "We will be coming soon!",
   "FOLLOWUS" : "Follow us on"
 }
