일어 문단나누기 수정

--- a/app/scripts/l10n/zh_TW.json
+++ b/app/scripts/l10n/zh_TW.json
@@ -1,7 +1,7 @@
 {
   "DROP" : "drop",
   "DISCOVER" : "discover",
-  "CHAT" : "聊天",
+  "CHAT" : "chat",
   "SHARE" : "share",
   "COMINGSOON" : "iOS & Android 即將上市",
   "WELCOME-TITLE" : "歡迎您使用Tōmōni,世界上第一次以活動為根基的搜索軟件！",
