중국어, 일본어 언어팩 수정

--- a/app/scripts/l10n/ja_JP.json
+++ b/app/scripts/l10n/ja_JP.json
@@ -3,28 +3,28 @@
   "DISCOVER" : "discover",
   "CHAT" : "chat",
   "SHARE" : "share",
-  "COMINGSOON" : "iOS版と Android版がまもなく発表されます。",
+  "COMINGSOON" : "Coming soon for iOS & Android.",
   "WELCOME-TITLE" : "世界初のアクティビティ発見アプリ、Tomoniにようこそ！",
   "WELCOME-CONTENT" : "身の回りのアクティビティに接続しよう。",
-  "TOMO-TITLE1" : "トモはデートを",
+  "TOMO-TITLE1" : "Tomoは出会いを",
   "TOMO-TITLE2" : "探してくれます。",
   "TOMO-P1" : "Tomoに公開されたあなたのアクティビティは、近くのユーザに公開され、見知らぬ仲間との交流を可能にします。",
   "TOMO-P2" : "新しい友人を見つけるのに、面倒な入力や手数料は必要ありません。",
   "TOMO-P3" : "遊びたい場所で、tomoをドロップするだけ",
-  "DROP-TITLE1" : "身の回りのtomoを",
-  "DROP-TITLE2" : "紹介したり、発見したり。",
-  "DROP-P" : "トモのフィルターはあなたの関心分野のみ表示してくれまう。",
+  "DROP-TITLE1" : "Tomoで誘い",
+  "DROP-TITLE2" : "Tomoを発見！",
+  "DROP-P" : "Tomoフィルターで関心分野を絞り込み。",
   "CHAT-TITLE1" : "楽しいことを",
   "CHAT-TITLE2" : "見つけたら？",
   "CHAT-TITLE3" : "それについてチャットをしよう",
   "CHAT-P" : "チャットを使って詳細や出会いを、共有しよう。",
-  "SHARE-TITLE1" : "あなたのアクティビティを",
-  "SHARE-TITLE2" : "フェースブックや",
-  "SHARE-TITLE3" : "ツイッターで",
+  "SHARE-TITLE1" : "アクティビティを",
+  "SHARE-TITLE2" : "Facebookや",
+  "SHARE-TITLE3" : "Twitterで",
   "SHARE-TITLE4" : "共有しましょう。",
-  "SHARE-P1" : "既存の友達もし",
-  "SHARE-P2" : "くは新しい人と！",
+  "SHARE-P1" : "仲間同士も、",
+  "SHARE-P2" : "見知らぬ人も",
   "COMINGSOON-TITLE1" : "一緒にランチしますか？",
   "COMINGSOON-TITLE2" : "We will be coming soon!",
-  "FOLLOWUS" : "私達をフォローする"
+  "FOLLOWUS" : "フォローする"
 }
