--- a/app/scripts/l10n/zh_TW.json
+++ b/app/scripts/l10n/zh_TW.json
@@ -13,15 +13,15 @@
   "TOMO-P3" : "只要插Tōmō在您想活動的地域。",
   "DROP-TITLE1" : "插tomo找",
   "DROP-TITLE2" : "您周圍的tomo們。",
-  "DROP-P" : "Tomo filters keep content interesting to you.",
+  "DROP-P" : "Tōmō筛选器功能會繼續保持內容會引起您的關注。",
   "CHAT-TITLE1" : "您在找",
   "CHAT-TITLE2" : "有趣的事情嗎？",
   "CHAT-TITLE3" : "對於那個事情聊天吧",
   "CHAT-P" : "為談談具體事情或預約會面，用聊天功能",
-  "SHARE-TITLE1" : "分享",
-  "SHARE-TITLE2" : "您的活動",
-  "SHARE-TITLE3" : "在Facebook",
-  "SHARE-TITLE4" : "或twitter。",
+  "SHARE-TITLE1" : "在Facebook",
+  "SHARE-TITLE2" : "及twitter上分享",
+  "SHARE-TITLE3" : "您的活動",
+  "SHARE-TITLE4" : "",
   "SHARE-P1" : "給您朋友們推薦Tōmōni",
   "SHARE-P2" : "或交新朋友吧。",
   "COMINGSOON-TITLE1" : "您對Tōmōni感興趣嗎？",
