Tomo popup language pack 적용

--- a/app/scripts/l10n/en_US.json
+++ b/app/scripts/l10n/en_US.json
@@ -26,5 +26,15 @@
   "SHARE-P2" : "or meet new people.",
   "COMINGSOON-TITLE1" : "Like us much?",
   "COMINGSOON-TITLE2" : "We will be coming soon!",
-  "FOLLOWUS" : "Follow us on"
+  "FOLLOWUS" : "Follow us on",
+  "JORDAN" : "Jordan",
+  "NESTOR" : "Nestor",
+  "KYEONGSIK" : "Kyeongsik",
+  "MARISA" : "Marisa",
+  "MOMO" : "Momo",
+  "TOMO_EXERCISE" : "Join my riverside run at 6!",
+  "TOMO_DATE_1" : "Officially single!",
+  "TOMO_DATE_2" : "Need somebody to talk to",
+  "TOMO_EAT" : "Let's get some sushi around 7",
+  "TOMO_BEER" : "Salsa and beer rock"
 }
