--- a/app/scripts/l10n/ja_JP.json
+++ b/app/scripts/l10n/ja_JP.json
@@ -26,5 +26,15 @@
   "SHARE-P2" : "見知らぬ人も",
   "COMINGSOON-TITLE1" : "一緒にランチしますか？",
   "COMINGSOON-TITLE2" : "We will be coming soon!",
-  "FOLLOWUS" : "フォローする"
+  "FOLLOWUS" : "フォローする",
+  "JORDAN" : "ジョーダン",
+  "NESTOR" : "ネスター",
+  "KYEONGSIK" : "キョンシク",
+  "MARISA" : "マリサ",
+  "MOMO" : "モモ",
+  "TOMO_EXERCISE" : "6時に一緒に走りませんか？",
+  "TOMO_DATE_1" : "もうシングルだ！",
+  "TOMO_DATE_2" : "話し相手がほしいです。",
+  "TOMO_EAT" : "19時くらいにすし食べに行きません？",
+  "TOMO_BEER" : "サルサダンスとビール！"
 }
