--- a/app/scripts/l10n/ko_KR.json
+++ b/app/scripts/l10n/ko_KR.json
@@ -26,5 +26,15 @@
   "SHARE-P2" : "새로운 사람들을 만날 수 있습니다.",
   "COMINGSOON-TITLE1" : "마음에 드시나요?",
   "COMINGSOON-TITLE2" : "We will be coming soon!",
-  "FOLLOWUS" : "Follow us on"
+  "FOLLOWUS" : "Follow us on",
+  "JORDAN" : "조단",
+  "NESTOR" : "네스터",
+  "KYEONGSIK" : "경식",
+  "MARISA" : "마리사",
+  "MOMO" : "모모",
+  "TOMO_EXERCISE" : "6시에 같이 달릴까요?",
+  "TOMO_DATE_1" : "이제 싱글이다!",
+  "TOMO_DATE_2" : "지금 얘기 할 사람이 필요해",
+  "TOMO_EAT" : "7시쯤에 초밥 먹으러 갑시다.",
+  "TOMO_BEER" : "한 잔의 맥주와 살사 댄스"
 }
