--- a/app/scripts/l10n/zh_TW.json
+++ b/app/scripts/l10n/zh_TW.json
@@ -26,5 +26,15 @@
   "SHARE-P2" : "或交新朋友吧。",
   "COMINGSOON-TITLE1" : "您對Tōmōni感興趣嗎？",
   "COMINGSOON-TITLE2" : "Tōmōni即將上市啦！",
-  "FOLLOWUS" : "關注我們在"
+  "FOLLOWUS" : "關注我們在",
+  "JORDAN" : "喬丹",
+  "NESTOR" : "内斯特",
+  "KYEONGSIK" : "景植",
+  "MARISA" : "玛丽莎",
+  "MOMO" : "陌陌",
+  "TOMO_EXERCISE" : "晚上河边慢跑，求陪同。。。",
+  "TOMO_DATE_1" : "我现在正式单身！",
+  "TOMO_DATE_2" : "找人聊天！",
+  "TOMO_EAT" : "晚上7点吃寿司，求陪同。。。",
+  "TOMO_BEER" : "跳萨尔萨舞后喝啤酒"
 }
