일본어 길이 수정

--- a/app/scripts/l10n/ja_JP.json
+++ b/app/scripts/l10n/ja_JP.json
@@ -35,6 +35,6 @@
   "TOMO_EXERCISE" : "6時に一緒に走りませんか？",
   "TOMO_DATE_1" : "もうシングルだ！",
   "TOMO_DATE_2" : "話し相手がほしいです。",
-  "TOMO_EAT" : "19時くらいにすし食べに行きません？",
+  "TOMO_EAT" : "一緒にごはんどう？",
   "TOMO_BEER" : "サルサダンスとビール！"
 }
