Gruntfile build 실섭에 맞게 수정. 언어팩 한글 통일성 추가

--- a/app/scripts/l10n/ko_KR.json
+++ b/app/scripts/l10n/ko_KR.json
@@ -6,7 +6,7 @@
   "COMINGSOON" : "Coming soon for iOS & Android.",
   "WELCOME-TITLE" : "환영합니다! 최초의 활동 기반 친구찾기 앱 토모니입니다.",
   "WELCOME-CONTENT" : "여러분의 가까운 곳에서 새로운 친구를 찾아보세요.",
-  "TOMO-TITLE1" : "Tomo는 당신에게",
+  "TOMO-TITLE1" : "토모는 당신에게",
   "TOMO-TITLE2" : "만남을 제공해줍니다.",
   "TOMO-P1" : "토모는 당신이 지정한 곳에 남아 모든 주변 사용자들에게 당신의 활동을 보여주고, 함께 하고자 하는 사람들과의 연락을 도와줍니다.",
   "TOMO-P2" : "당신이 가고자 하는 곳에 토모를 남기기만 하세요.",
@@ -18,7 +18,7 @@
   "CHAT-TITLE2" : "찾았나요?",
   "CHAT-TITLE3" : "이야기를 나눠보세요.",
   "CHAT-P" : "채팅 기능을 사용해 세부사항을 공유하고 약속을 잡을 수 있습니다.",
-  "SHARE-TITLE1" : "Facebook과",
+  "SHARE-TITLE1" : "페이스북과",
   "SHARE-TITLE2" : "트위터에",
   "SHARE-TITLE3" : "당신의 활동을",
   "SHARE-TITLE4" : "공유해 보세요.",
