language pack 수정

--- a/app/scripts/l10n/ko_KR.json
+++ b/app/scripts/l10n/ko_KR.json
@@ -3,27 +3,27 @@
   "DISCOVER" : "discover",
   "CHAT" : "chat",
   "SHARE" : "share",
-  "COMINGSOON" : "Coming soon for iOS & Android.",
-  "WELCOME-TITLE" : "환영합니다! 최초의 활동 기반 친구찾기 앱 토모니입니다.",
-  "WELCOME-CONTENT" : "여러분의 가까운 곳에서 새로운 친구를 찾아보세요.",
-  "TOMO-TITLE1" : "토모는 당신에게",
-  "TOMO-TITLE2" : "만남을 제공해줍니다.",
-  "TOMO-P1" : "토모는 당신이 지정한 곳에 남아 모든 주변 사용자들에게 당신의 활동을 보여주고, 함께 하고자 하는 사람들과의 연락을 도와줍니다.",
-  "TOMO-P2" : "당신이 가고자 하는 곳에 토모를 남기기만 하세요.",
-  "TOMO-P3" : "어떠한 양식도, 비용도 없이 새로운 사람들을 만날 수 있습니다.",
-  "DROP-TITLE1" : "토모를 남기고,",
-  "DROP-TITLE2" : "주변의 토모를 찾아보세요.",
-  "DROP-P" : "토모필터가 당신이 관심을 가질 만한 내용을 찾아줍니다.",
-  "CHAT-TITLE1" : "흥미로운 활동을",
-  "CHAT-TITLE2" : "찾았나요?",
-  "CHAT-TITLE3" : "이야기를 나눠보세요.",
-  "CHAT-P" : "채팅 기능을 사용해 세부사항을 공유하고 약속을 잡을 수 있습니다.",
-  "SHARE-TITLE1" : "페이스북과",
-  "SHARE-TITLE2" : "트위터에",
-  "SHARE-TITLE3" : "당신의 활동을",
-  "SHARE-TITLE4" : "공유해 보세요.",
-  "SHARE-P1" : "당신의 친구들과 함께 하거나",
-  "SHARE-P2" : "새로운 사람들을 만날 수 있습니다.",
+  "COMINGSOON" : "iOS와 Android로 곧 출시 될 에정입니다.",
+  "WELCOME-TITLE" : "환영합니다! 혼자 놀기 싫은 사람들을 위한 앱, 토모니입니다.",
+  "WELCOME-CONTENT" : "혼자가 싫다면, 토모니를 통해서 주변에 있는 Activity를 찾아보세요.",
+  "TOMO-TITLE1" : "토모는 함께하는걸",
+  "TOMO-TITLE2" : "좋아합니다.",
+  "TOMO-P1" : "내 토모를 고른 후, 원하는 위치에 놓으면, Activity를 함께 하고 싶어하는 다른 사용자가 당신의 토모를 두드릴 것입니다. ",
+  "TOMO-P2" : "아, 저희도 귀찮은 거 싫어 합니다. 개인 정보 확인은 서로 만나서 하시면 됩니다.",
+  "TOMO-P3" : "놀고 싶은 곳에 토모를 미리 놓아 둬 보세요.",
+  "DROP-TITLE1" : "토모를 남기는 것이 끝이 아닙니다.  주변의",
+  "DROP-TITLE2" : "토모도 찾아보세요.",
+  "DROP-P" : "토모필터는 당신이 관심있는 Activity들 만을 보여 줄 거에요.",
+  "CHAT-TITLE1" : "재미있는 지역에",
+  "CHAT-TITLE2" : "관심가는 토모를 찾았나요?",
+  "CHAT-TITLE3" : "그럼, 주저하지 마시고 토모를 두드려 보세요.",
+  "CHAT-P" : "간단한 인사로 채팅을 시작해보세요. 그리고 준비가 되었다면 즐기세요! 생각보다 놀 수 있는 시간은 그리 많지 않더라구요.",
+  "SHARE-TITLE1" : "내 친구들과도",
+  "SHARE-TITLE2" : "함께 하고 싶다면,",
+  "SHARE-TITLE3" : "페이스북과",
+  "SHARE-TITLE4" : "트위터에 공유를 해보세요.",
+  "SHARE-P1" : "함께 미쳐봤던 친구라면, 당연히 연락이 올겁니다.",
+  "SHARE-P2" : "새로운 친구들도 물론 함께 할 수 있을 거구요.",
   "COMINGSOON-TITLE1" : "마음에 드시나요?",
   "COMINGSOON-TITLE2" : "We will be coming soon!",
   "FOLLOWUS" : "Follow us on",
