--- a/app/scripts/l10n/en_US.json
+++ b/app/scripts/l10n/en_US.json
@@ -4,16 +4,16 @@
   "CHAT" : "chat",
   "SHARE" : "share",
   "COMINGSOON" : "Coming soon for iOS & Android.",
-  "WELCOME-TITLE" : "Welcome to Tomoni, the first activity-based discovery app!",
+  "WELCOME-TITLE" : "Welcome to Tōmōni, the first activity-based discovery app!",
   "WELCOME-CONTENT" : "Connect around activities in your neighborhood.",
-  "TOMO-TITLE1" : "Tomo will get",
-  "TOMO-TITLE2" : "you dates.",
-  "TOMO-P1" : "Tomo stays where you put it and make your activities visible to all nearby users, then help you communicate with your potential partners.",
-  "TOMO-P2" : "No need to fill any forms. No need to pay to get to meet new people.",
-  "TOMO-P3" : "Just drop a tomo where you ans to hang out.",
+  "TOMO-TITLE1" : "Tōmōni means together. ",
+  "TOMO-TITLE2" : "Let's meet!",
+  "TOMO-P1" : "Tōmōs are visible to all nearby users and let you broadcast activities where and when you want.",
+  "TOMO-P2" : "Dropping a tōmō is simple, and you don't need to pay to connect with people.",
+  "TOMO-P3" : "Just drop a tomo where you want to hang out.",
   "DROP-TITLE1" : "Drop and discover",
   "DROP-TITLE2" : "tomos around you.",
-  "DROP-P" : "Tomo filters keep content interesting to you.",
+  "DROP-P" : "Tōmō filters keep content interesting to you.",
   "CHAT-TITLE1" : "Find something",
   "CHAT-TITLE2" : "interesting?",
   "CHAT-TITLE3" : "Chat about it.",
@@ -25,7 +25,7 @@
   "SHARE-P1" : "Get your friends involved",
   "SHARE-P2" : "or meet new people.",
   "COMINGSOON-TITLE1" : "Like us much?",
-  "COMINGSOON-TITLE2" : "We will be coming soon!",
+  "COMINGSOON-TITLE2" : "Tōmōni coming soon!",
   "FOLLOWUS" : "Follow us on",
   "JORDAN" : "Jordan",
   "NESTOR" : "Nestor",
