facebook tag added, language pack edited

--- a/app/scripts/l10n/ko_KR.json
+++ b/app/scripts/l10n/ko_KR.json
@@ -8,16 +8,16 @@
   "WELCOME-CONTENT" : "혼자가 싫다면, 토모니를 통해서 주변에 있는 Activity를 찾아보세요.",
   "TOMO-TITLE1" : "토모는 함께하는걸",
   "TOMO-TITLE2" : "좋아합니다.",
-  "TOMO-P1" : "내 토모를 고른 후, 원하는 위치에 놓으면, Activity를 함께 하고 싶어하는 다른 사용자가 당신의 토모를 두드릴 것입니다. ",
-  "TOMO-P2" : "아, 저희도 귀찮은 거 싫어 합니다. 개인 정보 확인은 서로 만나서 하시면 됩니다.",
-  "TOMO-P3" : "놀고 싶은 곳에 토모를 미리 놓아 둬 보세요.",
-  "DROP-TITLE1" : "토모를 남기는 것이 끝이 아닙니다.  주변의",
-  "DROP-TITLE2" : "토모도 찾아보세요.",
+  "TOMO-P1" : "토모를 고른 후, 원하는 위치에 놓으면,",
+  "TOMO-P2" : "Activity를 함께 하고 싶어하는 다른 사용자가 ",
+  "TOMO-P3" : " 당신의 토모를 두드릴 것입니다. ",
+  "DROP-TITLE1" : "토모를 미리 놓아 두는 것도",
+  "DROP-TITLE2" : "좋은 방법입니다.",
   "DROP-P" : "토모필터는 당신이 관심있는 Activity들 만을 보여 줄 거에요.",
-  "CHAT-TITLE1" : "재미있는 지역에",
-  "CHAT-TITLE2" : "관심가는 토모를 찾았나요?",
-  "CHAT-TITLE3" : "그럼, 주저하지 마시고 토모를 두드려 보세요.",
-  "CHAT-P" : "간단한 인사로 채팅을 시작해보세요. 그리고 준비가 되었다면 즐기세요! 생각보다 놀 수 있는 시간은 그리 많지 않더라구요.",
+  "CHAT-TITLE1" : "관심가는 토모를",
+  "CHAT-TITLE2" : "찾았다구요?",
+  "CHAT-TITLE3" : "그럼, 주저하지 마시고 채팅을 시작해 보세요.",
+  "CHAT-P" : "간단한 인사로 시작해보세요. 그리고 준비가 되었다면 함께 즐겨보세요!",
   "SHARE-TITLE1" : "내 친구들과도",
   "SHARE-TITLE2" : "함께 하고 싶다면,",
   "SHARE-TITLE3" : "페이스북과",
