ko language edited

--- a/app/scripts/l10n/ko_KR.json
+++ b/app/scripts/l10n/ko_KR.json
@@ -5,15 +5,15 @@
   "SHARE" : "share",
   "COMINGSOON" : "iOS와 Android로 곧 출시 될 에정입니다.",
   "WELCOME-TITLE" : "환영합니다! 혼자 놀기 싫은 사람들을 위한 앱, 토모니입니다.",
-  "WELCOME-CONTENT" : "혼자가 싫다면, 토모니를 통해서 주변에 있는 Activity를 찾아보세요.",
+  "WELCOME-CONTENT" : "혼자가 싫다면, 토모니를 통해서 주변에 있는 '꺼리'를 찾아보세요.",
   "TOMO-TITLE1" : "토모는 함께하는걸",
   "TOMO-TITLE2" : "좋아합니다.",
   "TOMO-P1" : "토모를 고른 후, 원하는 위치에 놓으면,",
-  "TOMO-P2" : "Activity를 함께 하고 싶어하는 다른 사용자가 ",
+  "TOMO-P2" : "'꺼리'를 함께 하고 싶어하는 다른 사용자가 ",
   "TOMO-P3" : " 당신의 토모를 두드릴 것입니다. ",
-  "DROP-TITLE1" : "토모를 미리 놓아 두는 것도",
-  "DROP-TITLE2" : "좋은 방법입니다.",
-  "DROP-P" : "토모필터는 당신이 관심있는 Activity들 만을 보여 줄 거에요.",
+  "DROP-TITLE1" : "토모를 미리 놓아 두는",
+  "DROP-TITLE2" : "것도 좋은 방법입니다.",
+  "DROP-P" : "토모필터는 당신이 관심있는 토모들 만을 보여 줄 거에요.",
   "CHAT-TITLE1" : "관심가는 토모를",
   "CHAT-TITLE2" : "찾았다구요?",
   "CHAT-TITLE3" : "그럼, 주저하지 마시고 채팅을 시작해 보세요.",
