--- a/app/scripts/l10n/en_US.json
+++ b/app/scripts/l10n/en_US.json
@@ -3,7 +3,7 @@
   "DISCOVER" : "discover",
   "CHAT" : "chat",
   "SHARE" : "share",
-  "COMINGSOON" : "Coming soon for iOS & Android.",
+  "COMINGSOON" : "Available at iTunes & Play store.",
   "WELCOME-TITLE" : "Welcome to Tōmōni, the first activity-based discovery app!",
   "WELCOME-CONTENT" : "Connect around activities in your neighborhood.",
   "TOMO-TITLE1" : "Tōmōni means together. ",
@@ -25,7 +25,7 @@
   "SHARE-P1" : "Get your friends involved",
   "SHARE-P2" : "or meet new people.",
   "COMINGSOON-TITLE1" : "Like us much?",
-  "COMINGSOON-TITLE2" : "Tōmōni coming soon!",
+  "COMINGSOON-TITLE2" : "Tōmōni is available now!",
   "FOLLOWUS" : "Follow us on",
   "JORDAN" : "Jordan",
   "NESTOR" : "Nestor",
