--- a/app/scripts/l10n/ko_KR.json
+++ b/app/scripts/l10n/ko_KR.json
@@ -3,7 +3,7 @@
   "DISCOVER" : "discover",
   "CHAT" : "chat",
   "SHARE" : "share",
-  "COMINGSOON" : "iOS와 Android로 곧 출시 될 에정입니다.",
+  "COMINGSOON" : "앱스토어와 구글스토어에서 다운하세요.",
   "WELCOME-TITLE" : "환영합니다! 혼자 놀기 싫은 사람들을 위한 앱, 토모니입니다.",
   "WELCOME-CONTENT" : "혼자가 싫다면, 토모니를 통해서 주변에 있는 '꺼리'를 찾아보세요.",
   "TOMO-TITLE1" : "토모는 함께하는걸",
@@ -25,7 +25,7 @@
   "SHARE-P1" : "함께 미쳐봤던 친구라면, 당연히 연락이 올겁니다.",
   "SHARE-P2" : "새로운 친구들도 물론 함께 할 수 있을 거구요.",
   "COMINGSOON-TITLE1" : "마음에 드시나요?",
-  "COMINGSOON-TITLE2" : "We will be coming soon!",
+  "COMINGSOON-TITLE2" : "지금 다운로드하세요!",
   "FOLLOWUS" : "Follow us on",
   "JORDAN" : "조단",
   "NESTOR" : "네스터",
