language pack edit

--- a/app/scripts/l10n/ko_KR.json
+++ b/app/scripts/l10n/ko_KR.json
@@ -6,14 +6,14 @@
   "COMINGSOON" : "iOS와 Android로 곧 출시 될 에정입니다.",
   "WELCOME-TITLE" : "환영합니다! 혼자 놀기 싫은 사람들을 위한 앱, 토모니입니다.",
   "WELCOME-CONTENT" : "혼자가 싫다면, 토모니를 통해서 주변에 있는 '꺼리'를 찾아보세요.",
-  "TOMO-TITLE1" : "토모는 함께하는걸",
-  "TOMO-TITLE2" : "좋아합니다.",
-  "TOMO-P1" : "토모를 고른 후, 원하는 위치에 놓으면,",
-  "TOMO-P2" : "'꺼리'를 함께 하고 싶어하는 다른 사용자가 ",
-  "TOMO-P3" : " 당신의 토모를 두드릴 것입니다. ",
-  "DROP-TITLE1" : "토모를 미리 놓아 두는",
-  "DROP-TITLE2" : "것도 좋은 방법입니다.",
-  "DROP-P" : "토모필터는 당신이 관심있는 토모들 만을 보여 줄 거에요.",
+  "TOMO-TITLE1" : "토모는 함께노는걸",
+  "TOMO-TITLE2" : "권장합니다.",
+  "TOMO-P1" : "토모를 고른 후, 원하는 위치에 놓으면,'꺼리'를 함께 하고 싶어하는 다른 사용자가 당신의 토모를 두드릴 것입니다. ",
+  "TOMO-P2" : "토모를 미리 놓아두는 것도 좋은 방법입니다.",
+  "TOMO-P3" : "아! 저희도 귀찮은 일 싫어합니다. 개인정보 확인은 서로 만나서 하시면 됩니다.",
+  "DROP-TITLE1" : "토모를 남기는 것이 끝",
+  "DROP-TITLE2" : "이 아닙니다. 주변의 토모도 찾아보세요.",
+  "DROP-P" : "더 알고 싶다면 토모를 두드려서 간단한 정보를 확인해 보세요. 그리고 토모필터는 당신이 관심있는 토모들 만을 보여 줄 거에요.",
   "CHAT-TITLE1" : "관심가는 토모를",
   "CHAT-TITLE2" : "찾았다구요?",
   "CHAT-TITLE3" : "그럼, 주저하지 마시고 채팅을 시작해 보세요.",
@@ -25,7 +25,7 @@
   "SHARE-P1" : "함께 미쳐봤던 친구라면, 당연히 연락이 올겁니다.",
   "SHARE-P2" : "새로운 친구들도 물론 함께 할 수 있을 거구요.",
   "COMINGSOON-TITLE1" : "마음에 드시나요?",
-  "COMINGSOON-TITLE2" : "We will be coming soon!",
+  "COMINGSOON-TITLE2" : "Tōmōni coming soon!",
   "FOLLOWUS" : "Follow us on",
   "JORDAN" : "조단",
   "NESTOR" : "네스터",
