--- a/app/scripts/l10n/zh_TW.json
+++ b/app/scripts/l10n/zh_TW.json
@@ -4,7 +4,7 @@
   "CHAT" : "chat",
   "SHARE" : "share",
   "COMINGSOON" : "iOS & Android 即將上市",
-  "WELCOME-TITLE" : "歡迎您使用Tōmōni,世界上第一次以活動為根基的搜索軟件！",
+  "WELCOME-TITLE" : "歡迎您使用Tōmōni,世界上第一次以活動為根基的社交發現軟件！",
   "WELCOME-CONTENT" : "連接您周圍的活動。",
   "TOMO-TITLE1" : "Tōmō會給您",
   "TOMO-TITLE2" : "約會機會。",
