--- a/app/scripts/l10n/en_US.json
+++ b/app/scripts/l10n/en_US.json
@@ -5,7 +5,7 @@
   "SHARE" : "share",
   "COMINGSOON" : "Available at iTunes & Play store.",
   "WELCOME-TITLE" : "Welcome to Tōmōni, the first activity-based discovery app!",
-  "WELCOME-CONTENT" : "Connect around activities in your neighborhood.",
+  "WELCOME-CONTENT" : "Connect with activities in your neighborhood.",
   "TOMO-TITLE1" : "Tōmōni means together. ",
   "TOMO-TITLE2" : "Let's meet!",
   "TOMO-P1" : "Tōmōs are visible to all nearby users and let you broadcast activities where and when you want.",
@@ -13,11 +13,11 @@
   "TOMO-P3" : "Just drop a tomo where you want to hang out.",
   "DROP-TITLE1" : "Drop and discover",
   "DROP-TITLE2" : "tomos around you.",
-  "DROP-P" : "Tōmō filters keep content interesting to you.",
-  "CHAT-TITLE1" : "Find something",
+  "DROP-P" : "Tōmō filters assort contents interesting to you.",
+  "CHAT-TITLE1" : "Found something",
   "CHAT-TITLE2" : "interesting?",
   "CHAT-TITLE3" : "Chat about it.",
-  "CHAT-P" : "Use chat to share details and meetup.",
+  "CHAT-P" : "Use chat to share details and meetups.",
   "SHARE-TITLE1" : "Share your",
   "SHARE-TITLE2" : "activities on ",
   "SHARE-TITLE3" : "Facebook and",
