--- a/app/scripts/l10n/en_US.json
+++ b/app/scripts/l10n/en_US.json
@@ -13,7 +13,7 @@
   "TOMO-P3" : "Just drop a tomo where you want to hang out.",
   "DROP-TITLE1" : "Drop and discover",
   "DROP-TITLE2" : "tomos around you.",
-  "DROP-P" : "Tōmō filters assort contents interesting to you.",
+  "DROP-P" : "Tōmō Filters assort contents interesting to you.",
   "CHAT-TITLE1" : "Found something",
   "CHAT-TITLE2" : "interesting?",
   "CHAT-TITLE3" : "Chat about it.",
